@@ -7,6 +7,7 @@
       store data in e.g. BerkeleyDB, Cache or other key-value
       backends.
     - Use Module::Pluggable for finding plugins
+    - Disable SQLite's journal while training. Speeds up long imports.
 
 0.08 Wed Feb 10 00:06:20 GMT 2010
     - 0.07 broke the PostgreSQL and MySQL backend. Fixed them.
